--- a/index.html
+++ b/index.html
@@ -9,5 +9,20 @@
 </head>
 <body>
     <h1>Rescuefox</h1>
+    <nav>
+        <ul>
+            <li>About us</li>
+            <li>Donate</li>
+            <li>Gallery</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <section>About us</section>
+    <section>Donate</section>
+    <section>Gallery</section>
+    <section>Contact</section>
+
+
 </body>
 </html>
